# version-sat

./: cabal.project  version-sat.cabal
fixtures/: assoc-1.1~r0.cabal  assoc-1.1~r1.cabal
src/: PackageDescriptionExtras.hs  VersionExtras.hs  VersionSAT.hs
src/VersionSAT/: PackageDescription.hs
src/VersionSAT/PackageDescription/: AutoFlags.hs  Common.hs  Revision.hs  Satisfiable.hs
tests/: version-sat-demo.hs  version-sat-tests.hs
